# raphael-workspaces

./: Dockerfile  README.md  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml
src/raphael_workspaces/: __init__.py  app.py  files_store.py  paths.py  projects.py  routes.py  settings_store.py  store.py
src/raphael_workspaces/delta/: engine.py  mapper.py
src/raphael_workspaces/vcs/: service.py  storage.py
tests/: conftest.py  test_events.py  test_files.py  test_health.py  test_lineage.py  test_repo_settings.py  test_vcs.py
